# fastapi_demo

./: .gitignore  Readme.md  main.py  pyproject.toml
fastapi_demo/: main.py
